--- a/6.html
+++ b/6.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Магазин сувениры крым </title>
+
+	<title>Document </title>
+
+
+
+
 	<style type="text/css">
 		body {
 			font-family: sans-serif;
@@ -21,7 +26,15 @@
 
 
 		.nav-li {
-			font-
+			margin-top:30px;
+
+				}
+		.nav-li li {
+			padding: 0 20px;
+			margin: 15px 0 15px 10px;
+			padding-bottom:15px;
+			border-bottom: 1px solid rgba(0,0,0,0.1);
+
 		}
 	</style>
 </head>
@@ -30,7 +43,7 @@
 
 
 
-	<p style="font-size: 35px; font-weight: bold">Click a list item to replace this text.</p>
+	<h1 style="font-size: 35px; font-weight: bold" id="our-headline">Click a list item to replace this text.</h1>
 
 	<button class="buttonAdd">Add new item</button>
 
@@ -40,7 +53,7 @@
 
 
 
-		<ul>
+		<ul id=our-list>
 
 			<li>First item</li>
 
@@ -64,23 +77,6 @@
 
 
 
-
+<script type="text/javascript" src="JS/main.js"></script>
 </body>
 </html>
-
-
-
-
-
-<!-- 
-
-
-
-*HELP*
-
-https://codepen.io/imohkay/pen/FCdsb   - Slandted Buttons with Pure CSS
-
-https://www.w3schools.com/cssref/css3_pr_box-shadow.asp  - CSS box-shadow property
-
-
- -->
