--- a/0.html
+++ b/0.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Магазин сувениры крым </title>
+	<title>Document </title>
 	<style type="text/css">
 		body {
 			font-family: sans-serif;
@@ -21,7 +21,15 @@
 
 
 		.nav-li {
-			font-
+			margin-top:30px;
+
+				}
+		.nav-li li {
+			padding: 0 20px;
+			margin: 15px 0 15px 10px;
+			padding-bottom:15px;
+			border-bottom: 1px solid rgba(0,0,0,0.1);
+
 		}
 	</style>
 </head>
